--- a/styles/modal.css
+++ b/styles/modal.css
@@ -16,8 +16,9 @@
   margin: 15% auto; 
   padding: 2rem;
   border: 1px solid #888;
-  width: 60%; 
-  height: 4rem;
+  width: 30%; 
+  min-width: 16rem;
+  height: 6rem;
 }
 
 #new-list-form {
@@ -50,4 +51,25 @@
   display: flex;
   justify-content: center;
   gap: 2rem;
+}
+
+.new-task-modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+
+.task-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
 }
