--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,11 @@
+* {
+  font-family: 'Kalam', sans-serif;
+}
+
 body {
   margin: 0;
+  font-family: 'Kalam', sans-serif;
+  display: flex;
 }
 
 :root {
@@ -29,53 +35,60 @@ body {
   flex: 0.5;
   display: flex;
   flex-direction: column;
-  max-width: 15rem;
+  max-width: 20rem;
   min-width: 15rem;
 }
 
-.todo-tasks {
-  flex: 1;
+.menu-header {
+  flex: 0.2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.menu-header {
-  flex: 0.1;
+#all-tasks,
+#today-tasks {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
 }
 
 .menu-content {
   flex: 1;
   font-size: 1.5rem;
   padding-left: 1rem;
+  border-color: #8c8c8c;
 }
 
-.project-labels {
+.list-labels {
   display: flex;
   align-items: center;
 }
 
-.project-add {
+.list-add {
   padding: 0;
-  width: 1.5rem;
-  height: 1.5rem;
-  margin-left: 1rem;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.5rem;
   background-color: transparent;
+  border: none;
   border-radius: 2rem;
-  font-size: 1.5rem;
   background-image: url("images/plus.svg");
+  cursor: pointer;
 }
 
-.project-add > img {
+.list-add > img {
   width: 100%;
   height: 100%;
 }
 
 .user-lists {
   padding-left: 1rem;
-  background-color: white;
   height: 30rem;
 }
 
 .list-container {
-  background-color: red;
   height: 100%;
 }
 
@@ -83,4 +96,25 @@ body {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.listDeleteBtn > img {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.newList {
+  font-size: 1.2rem;
+  color: #F5F5DC;
+  cursor: pointer;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  background-color: transparent;
+  border: none;
+}
+
+.newListLine {
+  display: flex;
+  justify-content: space-between;
 }
