--- a/styles/modal.css
+++ b/styles/modal.css
@@ -29,24 +29,6 @@
   gap: 0.5rem;
 }
 
-#modal-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 3rem;
-  gap: 0.5rem;
-}
-
-#modal-form > input {
-  width: 15rem;
-}
-
-#modal-form > label,
-#modal-form > input {
-  display: block;
-}
-
 .list-modal-buttons {
   display: flex;
   justify-content: center;
@@ -71,5 +53,29 @@
   margin: 15% auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; 
+  width: 30rem;
+}
+
+.task-modal-btns {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+#modal-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+#modal-form > input {
+  width: 15rem;
+  text-align: center;
+}
+
+#modal-form > label,
+#modal-form > input {
+  display: block;
 }
