--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -34,7 +34,7 @@
   background-color: orange;
   height: 10rem;
   border-radius: 2rem;
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,23 +43,25 @@
 
 .task-list-title > div {
   background-color: red;
-  height: 10rem;
+  height: auto;
   width: 90%;
   text-align: center;
-  font-size: 7rem;
+  font-size: 5rem;
 }
 
 .new-tasks-container {
   background-color: green;
   border-radius: 2rem;
-  height: 2rem;
-  width: 90%;
+  height: auto;
+  box-sizing: border-box;
+  padding: 1rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .new-task-btn {
-  width: 90%;
+  width: 100%;
   height: 2.5rem;
   font-size: 1rem;
   font-weight: bold;
@@ -67,9 +69,19 @@
   border: none;
   box-sizing: border-box; 
   text-align: left;
+  cursor: pointer;
 }
 
 .tasks-creation {
   box-sizing: border-box;
   padding: 1.5rem;
+}
+
+.task-display {
+  width: 100%;
+  background-color: gray;
+  height: 4rem;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
 }
