--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -23,6 +23,15 @@
   gap: 1rem;
 }
 
+.titleBox {
+  width: 100%;
+}
+
+.taskBox {
+  width: 100%;
+  height: 100vh;
+}
+
 .selected-list-banner {
   background-color: blue;
   height: 7rem;
@@ -58,10 +67,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .new-task-btn {
-  width: 100%;
+  width: auto;
   height: 2.5rem;
   font-size: 1rem;
   font-weight: bold;
@@ -70,6 +80,7 @@
   box-sizing: border-box; 
   text-align: left;
   cursor: pointer;
+  align-self: flex-start;
 }
 
 .tasks-creation {
@@ -77,11 +88,93 @@
   padding: 1.5rem;
 }
 
-.task-display {
-  width: 100%;
+.task-details {
   background-color: gray;
-  height: 4rem;
-  border-radius: 1rem;
+  width: 100%;
+  height: 3rem;
+  border-radius: 1rem 1rem 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.genTask {
+  width: 100%;
+  border-bottom: 1px solid black;
   display: flex;
   align-items: center;
+}
+
+
+.task-display {
+  display: flex;
+  flex-direction: column;
+  height: 3rem;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
+}
+
+.task-display-extended {
+  height: 5rem;
+}
+
+.task-duedate-box {
+  width: 5rem;
+  height: 3rem;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.task-buttons {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.2rem;
+}
+
+.task-delete-box,
+.task-edit-box,
+.task-expand-box,
+.task-star-box {
+  width: 1.4rem;
+  height: 1.4rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.task-delete-box > img,
+.task-edit-box > img,
+.task-expand-box > img,
+.task-star-box > img {
+  height: 100%;
+  width: 100%;
+}
+
+.task-checkbox {
+  clip-path: circle(46% at 50% 50%);
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.task-title-box {
+  height: 2rem;
+  flex: 1;
+  overflow: hidden;
+}
+
+.description-display {
+  background-color: #808080;
+  box-sizing: border-box;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  width: 100%;
+  height: 2rem;
+  border-radius: 0 0 1rem 1rem;
+  min-height: 1.5rem;
+  max-height: 3.5rem;
 }
