--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   font-family: 'Kalam', sans-serif;
   display: flex;
+  justify-content: center;
+  background-color: black;
 }
 
 :root {
@@ -14,7 +16,7 @@ body {
 
 .site-container {
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   display: flex;
   flex-direction: column;
 }
@@ -25,13 +27,13 @@ body {
 }
 
 .todo-body {
-  background-color: #8c8c8c;
   display: flex;
   flex: 2;
+  border-radius: 2rem;
 }
 
 .todo-menu {
-  background-color: #525252;
+  background-color: #632b6c;
   flex: 0.5;
   display: flex;
   flex-direction: column;
@@ -44,26 +46,38 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+  border-bottom: 2px solid black;
 }
 
 #all-tasks,
-#today-tasks {
+#today-tasks,
+#starred-tasks {
   background-color: transparent;
   border: none;
   cursor: pointer;
   font-size: 1.5rem;
+  background-color: #d8b2ff;
+  border-radius: 1rem;
+  width: 90%;
 }
 
 .menu-content {
   flex: 1;
   font-size: 1.5rem;
-  padding-left: 1rem;
   border-color: #8c8c8c;
 }
 
 .list-labels {
   display: flex;
   align-items: center;
+  box-sizing: border-box;
+  padding-left: 0.5rem;
+  color: white;
+  border-top: 2px solid black;
+
+  margin-bottom: 0.3rem;
 }
 
 .list-add {
@@ -78,27 +92,32 @@ body {
   cursor: pointer;
 }
 
-.list-add > img {
+.list-add>img {
   width: 100%;
   height: 100%;
 }
 
 .user-lists {
-  padding-left: 1rem;
+  padding-left: 0.9rem;
   height: 30rem;
 }
 
 .list-container {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .listDeleteBtn {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
-.listDeleteBtn > img {
+.listDeleteBtn>img {
   height: 1.5rem;
   width: 1.5rem;
 }
@@ -117,4 +136,11 @@ body {
 .newListLine {
   display: flex;
   justify-content: space-between;
+  border-radius: 1rem;
+  background-color: #b266ff;
+  transition: 0.3s ease-in-out;
+}
+
+.newListLine:hover {
+  opacity: 0.7;
 }
