--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -13,23 +13,25 @@
 }
 
 .tasks-content {
-  background-color: #8C8C8C;
+  background-color: #3100a2;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  padding: 2rem;
+  padding: 2.5rem;
   gap: 1rem;
 }
 
 .titleBox {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .taskBox {
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 .selected-list-banner {
@@ -40,26 +42,24 @@
 }
 
 .task-list-title {
-  background-color: orange;
+  background-color: #d8b2ff;
   height: 10rem;
   border-radius: 2rem;
-  width: 100%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
 }
 
-.task-list-title > div {
-  background-color: red;
+.task-list-title>div {
   height: auto;
   width: 90%;
   text-align: center;
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 .new-tasks-container {
-  background-color: green;
   border-radius: 2rem;
   height: auto;
   box-sizing: border-box;
@@ -67,6 +67,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
@@ -77,10 +78,11 @@
   font-weight: bold;
   background-color: transparent;
   border: none;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   text-align: left;
   cursor: pointer;
   align-self: flex-start;
+  color: white;
 }
 
 .tasks-creation {
@@ -89,13 +91,10 @@
 }
 
 .task-details {
-  background-color: gray;
   width: 100%;
   height: 3rem;
-  border-radius: 1rem 1rem 0 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .genTask {
@@ -105,17 +104,24 @@
   align-items: center;
 }
 
+.new-task {
+  width: 70%;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
 
 .task-display {
+  background-color: #b266ff;
   display: flex;
   flex-direction: column;
   height: 3rem;
   overflow: hidden;
   transition: 0.5s ease-in-out;
+  border-radius: 1rem 1rem 1rem 1rem;
 }
 
 .task-display-extended {
-  height: 5rem;
+  height: 6.5rem;
 }
 
 .task-duedate-box {
@@ -128,7 +134,7 @@
 }
 
 .task-buttons {
-  width: 3rem;
+  width: 4rem;
   height: 3rem;
   display: flex;
   flex-wrap: wrap;
@@ -147,12 +153,34 @@
   padding: 0;
 }
 
-.task-delete-box > img,
-.task-edit-box > img,
-.task-expand-box > img,
-.task-star-box > img {
+.task-delete-box>img,
+.task-edit-box>img,
+.task-expand-box>img,
+.task-star-box>img {
   height: 100%;
   width: 100%;
+}
+
+.task-star {
+  fill: #b266ff;
+  transition: fill 0.5s ease-in-out;
+}
+
+.task-star:hover {
+  fill: #FFFF00;
+}
+
+.task-star-filled {
+  fill: #FFFF00;
+}
+
+.task-delete {
+  fill: #b266ff;
+  transition: fill 0.5s ease-in-out;
+}
+
+.task-delete:hover {
+  fill: #FF0000;
 }
 
 .task-checkbox {
@@ -165,9 +193,15 @@
   height: 2rem;
   flex: 1;
   overflow: hidden;
+  font-size: 1rem;
 }
 
-.description-display {
+.task-title-box-checked {
+  text-decoration: line-through;
+  text-decoration-color: white;
+}
+
+.titleBox .description-display {
   background-color: #808080;
   box-sizing: border-box;
   padding-left: 0.5rem;
@@ -177,4 +211,9 @@
   border-radius: 0 0 1rem 1rem;
   min-height: 1.5rem;
   max-height: 3.5rem;
+}
+
+.description-display {
+  font-size: 1rem;
+  word-break: break-all;
 }
