--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,24 +1,25 @@
 .list-modal {
   display: none;
   position: fixed;
-  z-index: 1; 
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .list-modal-content {
   background-color: #fefefe;
-  margin: 15% auto; 
+  margin: 15% auto;
   padding: 2rem;
   border: 1px solid #888;
-  width: 30%; 
+  width: 30%;
   min-width: 16rem;
   height: 6rem;
+  border-radius: 1.5rem;
 }
 
 #new-list-form {
@@ -36,30 +37,40 @@
 }
 
 .new-task-modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .task-modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; 
+  background-color: #916ECA;
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
   width: 30rem;
+  border-radius: 1.5rem;
 }
 
 .task-modal-btns {
   display: flex;
   justify-content: center;
   gap: 1rem;
+}
+
+.add-task,
+.close-task-modal {
+  border-radius: 1rem;
+  width: 4rem;
+  border: none;
+  cursor: pointer;
+  background-color: ;
 }
 
 #modal-form {
@@ -70,12 +81,70 @@
   margin-bottom: 1rem;
 }
 
-#modal-form > input {
+#modal-form>input {
   width: 15rem;
   text-align: center;
+  border-radius: 1.5rem;
+  border-color: black;
 }
 
-#modal-form > label,
-#modal-form > input {
+#modal-form>label,
+#modal-form>input {
   display: block;
+}
+
+
+.edit-modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.edit-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 1rem;
+  border: 1px solid #888;
+  width: 20%;
+  min-width: 16rem;
+  height: 15rem;
+  border-radius: 1.5rem;
+}
+
+.edit-modal-btns {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+#edit-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+#edit-form>input {
+  width: 15rem;
+  text-align: center;
+  border-radius: 1.5rem;
+}
+
+#edit-form>label,
+#edit-form>input {
+  display: block;
+}
+
+.edit-mode {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
