--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,4 +1,6 @@
-.list-modal {
+#list-modal,
+#edit-modal,
+#newTaskModal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -12,7 +14,7 @@
 }
 
 .list-modal-content {
-  background-color: #fefefe;
+  background-color: #916ECA;
   margin: 15% auto;
   padding: 2rem;
   border: 1px solid #888;
@@ -20,6 +22,15 @@
   min-width: 16rem;
   height: 6rem;
   border-radius: 1.5rem;
+}
+
+#add-list,
+#close-list-modal {
+  border-radius: 1rem;
+  width: 4rem;
+  border: none;
+  cursor: pointer;
+  background-color: ;
 }
 
 #new-list-form {
@@ -30,23 +41,15 @@
   gap: 0.5rem;
 }
 
+#new-list-form>input {
+  border-radius: 1.5rem;
+  border-color: black;
+}
+
 .list-modal-buttons {
   display: flex;
   justify-content: center;
   gap: 2rem;
-}
-
-.new-task-modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .task-modal-content {
@@ -66,6 +69,15 @@
 
 .add-task,
 .close-task-modal {
+  border-radius: 1rem;
+  width: 4rem;
+  border: none;
+  cursor: pointer;
+  background-color: ;
+}
+
+.save-task,
+.close-edit-modal {
   border-radius: 1rem;
   width: 4rem;
   border: none;
@@ -93,22 +105,8 @@
   display: block;
 }
 
-
-.edit-modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
 .edit-modal-content {
-  background-color: #fefefe;
+  background-color: #916ECA;
   margin: 15% auto;
   padding: 1rem;
   border: 1px solid #888;
